# enrgdocdb

./: .env.example  .gitignore  pyproject.toml  run_tests.sh
.github/workflows/: ci.yml
scripts/: sync_server_users.py
src/: admin.py  app.py  database.py  settings.py  slack.py
src/enrgdocdb/: admin.py  app.py  database.py  ldap_server.py  settings.py
src/enrgdocdb/forms/: document.py  file.py  user.py  wiki.py
src/enrgdocdb/migrations/: 1730235280_init.py  1730235952_user_deleted_at.py  1730240058_document_organization_id.py  1736002901_event.py  1736080208_event_organization_id.py  1736434732_topic_parent_topic_id.py  1773766361_wiki.py  1773768986_wiki_pages_is_pinned.py  1773769547_wiki_pages_base.py  1773772714_wiki_files.py  1773780470_wiki_permissions.py  1773780471_update_user_role_permissions.py
src/enrgdocdb/models/: __init__.py  author.py  base.py  document.py  event.py  topic.py  user.py  wiki.py
src/enrgdocdb/oauth/: slack.py
src/enrgdocdb/static/js/: redirect_after_login.js  user_files.js
src/enrgdocdb/templates/: base.html
src/enrgdocdb/templates/docdb/: base.html  create_user.html  document_upload_files.html  event_calendar.html  index.html  new_document.html  (+7 more)
src/enrgdocdb/utils/: admin.py  file.py  lldap.py  logging.py  pagination.py  sanitizer.py  security.py  url.py
src/enrgdocdb/views/: __init__.py  api.py  author.py  document.py  errors.py  event.py  file.py  index.py  institution.py  search.py  test_auth.py  topic.py  user.py  utils.py  view_all.py  wiki.py
src/forms/: document.py  user.py
src/migrations/: 1729973751_init.py  1730034308_user_first_name_and_last_name.py  1730042231_document.py  1730115924_documentfile_real_file_name.py  1730129429_document_abstract.py  1730195605_author_changes_institution.py  1730235280_init.py  1730235952_user_deleted_at.py  1730240058_document_organization_id.py  1736002901_event.py  1736434732_topic_parent_topic_id.py
src/models/: author.py  base.py  document.py  event.py  topic.py  user.py
src/oauth/: slack.py
src/static/: user_files.js
src/static/js/: date_handler.js
src/templates/: base.html  messages.html
src/templates/docdb/: base.html  document.html  event_calendar.html  index.html  new_document.html  no_role.html  profile.html  quick_search.html  view_all.html  view_author.html  view_document.html  view_document_type.html  view_event.html  view_institution.html  view_topic.html  view_user.html  your_account.html
src/templates/security/: _macros.html  _messages.html  base.html  login_user.html  register_user.html
src/utils/: admin.py  file.py  pagination.py  security.py
src/views/: __init__.py  author.py  document.py  errors.py  event.py  file.py  index.py  institution.py  search.py  topic.py  user.py  utils.py  view_all.py
tests/: conftest.py
tests/forms/: test_document_form.py  test_user_form.py
tests/models/: test_document.py  test_event.py  test_user.py  test_wiki.py
tests/utils/: test_file_upload_security.py  test_security.py
tests/views/: conftest.py  test_document_file_views.py  test_document_views.py  test_event_views.py  test_permission_enforcement.py  test_user_views.py  test_wiki_views.py
(+39 files in other folders)
