[project]
name = "enrgdocdb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.3",
    "flask-admin>=1.6.1",
    "flask-security-too>=5.5.2",
    "setuptools>=75.2.0",
    "flask-sqlalchemy-lite>=0.1.0",
    "flask-alembic>=3.1.1",
    "argon2-cffi>=23.1.0",
    "flask-babel>=4.0.0",
    "requests>=2.32.3",
    "bootstrap-flask>=2.4.1",
]

[tool.uv]
dev-dependencies = [
    "djlint>=1.35.2",
]
